kubernetes/production/db-service.yaml
apiVersion: v1
kind: Service
metadata:
   name: mongo
   labels:
     name: mongo
spec:
  selector:
    name: mongo
  ports:
  - protocol: TCP 
    port: 27017
    targetPort: 27017
